--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://fauzanhalim.github.io/nurfauzanhalim.my.id",
-  "name": "portfolio-website",
+  "homepage": "https://fauzanhalim.github.io/nurfauzanhalim.my.id",
+  "name": "portfolio-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
